--- a/includes/_header.html
+++ b/includes/_header.html
@@ -8,8 +8,8 @@
 
   <!-- @reload -->
 
-  <!-- @stylesheet pure-min style -->
-  <!-- @javascript jquery-1.8.3.min jquery.color-2.1.0.min app -->
+  <!-- @stylesheet style -->
+  <!-- @javascript jquery-1.8.3.min interaction -->
 
   <link href="<!-- @path favicon.ico -->" rel="shortcut icon">
 
