More tweakin' and fiddling.
Added font
Sticky Footer
Cleaner Code

--- a/includes/_header.html
+++ b/includes/_header.html
@@ -20,5 +20,11 @@
 <body>
 
   <header>
+    <nav class="pure-g">
+      <div class="nav-links pure-u-1">
+        <a href="#" class="name">Ben Domanico</a>
+        <a href="mailto:ben@domanico.net" class="contact">Contact</a>
+      </div>
+    </nav>
     <!-- @include _nav -->
   </header>
