--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'grid';
+@import 'font';
 
 * {
   -webkit-box-sizing: border-box;
@@ -12,49 +13,82 @@ html {
 }
 
 body {
+  height: 100%;
+  margin: 0;
   background: #E2E2E2;
-  margin: 50px 0 50px;
-  transition: background-color 3  300ms ease-in-out;
+  transition: background-color 300ms ease-in-out;
 }
 
-nav {
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+h1 {
+  font: 48px DalaMoaRegularNo2;
+}
+
+header {
   position: fixed;
   left: 0;
   top: 0;
-  height: 50px;
+  height: 70px;
   width: 100%;
   z-index: 10;
 
-  .nav-container {
-    width: 100%;
+  nav {
     max-width: 1400px;
-    margin: 0 auto;
+    margin: 0 auto 10px;
     padding: 0 20px;
-    background: green;
+    background: #e2e2e2;
+    transition: background-color 300ms ease-in-out;
+
+    .nav-links {
+      border-bottom: 1px solid #000;
+      margin-bottom: 10px;
+      padding: 30px 0 10px;
+      bottom: 0;
+
+      .name {
+        font: 30px/20px DalaMoaRegularNo2;
+        float: left;
+      }
+
+      .contact {
+        font-size: 9px;
+        letter-spacing: .25em;
+        text-transform: uppercase;
+        float: left;
+      }
+
+    }
   }
 }
 
 footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 50px;
+  height: 70px;
   width: 100%;
+  max-width: 1320px;
+  margin: 30px auto 0;
+  padding: 0 20px;
+  background-color: rgba(0,0,0,0.05);
 
-  .footer-container {
-    width: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 20px;
-    background: green;
+  .footer {
+    font-size: 9px;
+    letter-spacing: .25em;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 10px 20px 0;
   }
+
 }
 
-.content {
+main {
+  min-height: calc(100% - 100px);
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  padding: 0 10px 0 20px;
+  padding: 70px 10px 0 20px;
 
   .thumbnail {
     padding: 0 10px 10px 0;
@@ -65,7 +99,7 @@ footer {
     border-bottom: 1px solid rgba(0,0,0,0.5);
     padding-bottom: 10px;
     font-size: 9px;
-    letter-spacing: 1.5pt;
+    letter-spacing: .25em;
     transition: border-bottom 250ms ease-in-out;
 
 
@@ -103,9 +137,15 @@ footer {
 @media screen and (min-width: $md) {
 
 }
+
 @media screen and (min-width: $lg) {
-
+  header nav { padding: 0 40px; }
+  main { padding: 70px 30px 0 40px;}
+  footer { padding: 0 40px; }
 }
-@media screen and (min-width: $xl) {
 
+@media screen and (min-width: $xl) {
+  header nav { padding: 0 40px; }
+  main { padding: 70px 30px 0 40px;}
+  footer { padding: 0 40px; }
 }
