--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,6 +1,6 @@
   <footer>
-    <div class="footer-container pure-g">
-      <div class="pure-u-1">footer</div>
+    <div class="pure-g">
+      <div class="footer pure-u-1">footer</div>
     </div>
   </footer>
 
