--- a/includes/_header.html
+++ b/includes/_header.html
@@ -8,8 +8,8 @@
 
   <!-- @reload -->
 
-  <!-- @stylesheet style -->
-  <!-- @javascript jquery-1.8.3.min interaction -->
+  <!-- @stylesheet normalize style -->
+  <!-- @javascript jquery-1.8.3.min jquery.pjax interaction -->
 
   <link href="<!-- @path favicon.ico -->" rel="shortcut icon">
 
@@ -22,7 +22,7 @@
   <header>
     <nav class="pure-g">
       <div class="nav-links pure-u-1">
-        <a href="#" class="name">Ben Domanico</a>
+        <a href="/project.html" class="name">Ben Domanico</a>
         <a href="mailto:ben@domanico.net" class="contact">Contact</a>
       </div>
     </nav>
