--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,16 +16,15 @@ body {
   height: 100%;
   margin: 0;
   background: #E2E2E2;
+  color: rgba(0,0,0,0.75);
   transition: background-color 300ms ease-in-out;
+  font-family: CalibreWeb-Regular, Courier;
 }
 
 a {
   color: #000;
   text-decoration: none;
-}
-
-h1 {
-  font: 48px DalaMoaRegularNo2;
+  color: rgba(0,0,0,0.75);
 }
 
 header {
@@ -44,23 +43,29 @@ header {
     transition: background-color 300ms ease-in-out;
 
     .nav-links {
-      border-bottom: 1px solid #000;
+      border-bottom: 1px solid rgba(0,0,0,0.5);
       margin-bottom: 10px;
-      padding: 30px 0 10px;
+      height: 60px;
       bottom: 0;
+      position: relative;
 
       .name {
         font: 30px/20px DalaMoaRegularNo2;
-        float: left;
+        letter-spacing: 0.02em;
+        position: absolute;
+        bottom: 9px;
+        left: 0;
       }
 
       .contact {
-        font-size: 9px;
-        letter-spacing: .25em;
+        font-size: 10px;
+        letter-spacing: .2em;
         text-transform: uppercase;
-        float: left;
-      }
+        position: absolute;
+        right: 0;
+        bottom: 9px;
 
+      }
     }
   }
 }
@@ -68,14 +73,18 @@ header {
 footer {
   height: 70px;
   width: 100%;
-  max-width: 1320px;
-  margin: 30px auto 0;
+  max-width: 1400px;
+  margin: 80px auto 0;
   padding: 0 20px;
-  background-color: rgba(0,0,0,0.05);
 
-  .footer {
-    font-size: 9px;
-    letter-spacing: .25em;
+
+  .footer-container {
+    border-top: 1px solid rgba(0,0,0,0.2);
+  }
+
+  .footer-content {
+    font-size: 10px;
+    letter-spacing: .2em;
     text-transform: uppercase;
     text-align: center;
     padding: 10px 20px 0;
@@ -84,22 +93,32 @@ footer {
 }
 
 main {
-  min-height: calc(100% - 100px);
+  min-height: calc(100% - 150px);
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
-  padding: 70px 10px 0 20px;
+  padding: 170px 10px 0 20px;
 
-  .thumbnail {
+  .intro {
+    margin-bottom: 120px;
+
+    h1 {
+      font: 48px DalaMoaRegularNo2;
+      margin: 0;
+      letter-spacing: 0.02em;
+    }
+  }
+
+  .tile {
     padding: 0 10px 10px 0;
   }
 
-  .project {
+  .thumbnail {
     cursor: pointer;
-    border-bottom: 1px solid rgba(0,0,0,0.5);
+    border-bottom: 1px solid rgba(0,0,0,0.2);
     padding-bottom: 10px;
-    font-size: 9px;
-    letter-spacing: .25em;
+    font-size: 10px;
+    letter-spacing: .2em;
     transition: border-bottom 250ms ease-in-out;
 
 
@@ -117,13 +136,13 @@ main {
     }
 
     &:hover {
-      border-bottom: 1px solid rgba(0,0,0,1);
+      border-bottom: 1px solid rgba(0,0,0,0.5);
       img {
         filter: saturate(100%) opacity(100%);
         -webkit-filter: saturate(100%) opacity(100%);
       }
 
-      .title, .description { color: rgba(0,0,0,1); }
+      .title, .description { color: rgba(0,0,0,0.75); }
 
     }
 
@@ -140,12 +159,12 @@ main {
 
 @media screen and (min-width: $lg) {
   header nav { padding: 0 40px; }
-  main { padding: 70px 30px 0 40px;}
+  main { padding: 170px 30px 0 40px;}
   footer { padding: 0 40px; }
 }
 
 @media screen and (min-width: $xl) {
   header nav { padding: 0 40px; }
-  main { padding: 70px 30px 0 40px;}
+  main { padding: 170px 30px 0 40px;}
   footer { padding: 0 40px; }
 }
