This is me saying goodbye to the bg-color-on-hover thing.

--- a/assets/css/font.scss
+++ b/assets/css/font.scss
@@ -16,3 +16,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'CalibreWeb-Medium';
+  src: url('CalibreWeb-Medium.eot?#iefix') format('embedded-opentype'),
+	     url('CalibreWeb-Medium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
