--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,4 +1,13 @@
+// Sizes
 $sm: 568px;
 $md: 768px;
 $lg: 1024px;
 $xl: 1400px;
+
+// Colors
+$white: #E9E9E9;
+$lt_white: #C7C7C7;
+$md_white: #8F8F8F;
+$dk_white: #575757;
+$vdk_white: #414141;
+$black: #202020;
