--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,8 +1,14 @@
-  <footer>
-    <div class="footer-container pure-g">
-      <div class="footer-content pure-u-1">footer</div>
-    </div>
-  </footer>
+  <div class="wrapper footer">
+    <div class="container pure-g">
+
+      <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
+        <div class="tile-container">
+            footer
+        </div>
+      </div>
+
+    </div> <!-- /.container -->
+  </div> <!-- /.wrapper.footer -->
 
 </body>
 
