--- a/includes/_header.html
+++ b/includes/_header.html
@@ -19,12 +19,17 @@
 
 <body>
 
-  <header>
-    <nav class="pure-g">
+  <div class="wrapper nav opaque">
+    <div class="container pure-g">
+
       <div class="nav-links pure-u-1">
-        <a href="/project.html" class="name">Ben Domanico</a>
-        <a href="mailto:ben@domanico.net" class="contact">Contact</a>
+        <a href="/" class="name">Ben Domanico</a>
+
+        <ul class="nav-list">
+          <li><a href="http://www.linkedin.com/domanico">Experience</a></li>
+          <li><a href="mailto:ben@domanico.net">Contact</a></li>
+        </ul>
       </div>
-    </nav>
-    <!-- @include _nav -->
-  </header>
+
+    </div> <!-- /.container -->
+  </div> <!-- /.wrapper.nav -->
