--- a/includes/_header.html
+++ b/includes/_header.html
@@ -26,7 +26,7 @@
         <a href="/" class="name">Ben Domanico</a>
 
         <ul class="nav-list">
-          <li><a href="http://www.linkedin.com/domanico">Experience</a></li>
+          <li><a href="http://www.linkedin.com/domanico">Resume</a></li>
           <li><a href="mailto:ben@domanico.net">Contact</a></li>
         </ul>
       </div>
