--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,10 +1,9 @@
   <div class="wrapper footer">
     <div class="container pure-g">
 
-      <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-        <div class="tile-container">
-            footer
-        </div>
+      <div class="footer-links pure-u-1">
+        <div class="copyright">&copy; 2016 Ben Domanico</div>
+        <div class="contact">315 952 1525 &bull; ben@domanico.net</div>
       </div>
 
     </div> <!-- /.container -->
