--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -106,8 +106,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.content {
+#data-container {
   min-height: calc(100% - 100px);
+}
+
+.content {
+
 
   .intro {
     margin: 160px 0 120px;
@@ -124,9 +128,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .tile-container {
+  position: relative;
 
   h1 {
     font: 64px DalaMoaRegularNo2;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     margin: 0;
     letter-spacing: 0.04em;
     text-indent: -0.04em;
@@ -136,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
     font-size: 10px;
     letter-spacing: .2em;
-    margin: 0 0 10px 0;
+
   }
 
   p {
@@ -161,6 +168,17 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 10px;
     line-height: 14px;
     letter-spacing: .2em;
+
+    em {
+      font-style: normal;
+      color: $md_white;
+    }
+  }
+
+  .data {
+    .caption {
+      line-height: 16px;
+    }
   }
 
 }
@@ -197,6 +215,25 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.tile-callout {
+  border-top: 1px solid $dk_white;
+  border-bottom: 1px solid $dk_white;
+
+  p {
+    font: 32px/36px DalaMoaRegularNo2;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    letter-spacing: 0.04em;
+    text-indent: -0.04em;
+    padding: 50px 15% 40px;
+    text-align: center;
+  }
+}
+
+.tile-project_intro {
+
+}
+
 .project-mast {
   transition: opacity 1000ms ease-in-out;
   transition-delay: 300ms;
@@ -219,6 +256,7 @@ h1, h2, h3, h4, h5, h6 {
   .footer-links {
     border-top: 1px solid $black;
     position: relative;
+    margin-right: 10px;
   }
 
   .copyright, .contact {
@@ -237,29 +275,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .footer_nav {
-  background: $vdk_white;
-  padding: 60px 0;
+  //background: $vdk_white;
+  //padding: 60px 0;
   margin-top: 50px;
-
-  .tile-container {
-    border-top: 1px solid $black;
-    border-bottom: 0;
-    padding: 6px 0 0 0;
-    transition: opacity 150ms ease-in-out;
-
-    .sub-title, .caption {
-      color: $black;
-    }
-
-    &:hover {
-      opacity: 0.5;
-    }
-
-  }
 }
 
 @media screen and (min-width: $sm) {
   .project-mast { visibility: visible; }
+
 }
 
 @media screen and (min-width: $md) {
@@ -269,8 +292,10 @@ h1, h2, h3, h4, h5, h6 {
 @media screen and (min-width: $lg) {
   .project-mast { visibility: visible; }
   .wrapper .container { padding: 0 30px 0 40px; }
+  .tile-project_intro { min-height: 250px; }
+  .tile-container .data { position: absolute; bottom: 10px; left: 0; }
 }
 
 @media screen and (min-width: $xl) {
-  .wrapper .container { padding: 0 30px 0 40px; }
+
 }
