Lots of text style cleanup
headings and small-caps styles are defined globally

--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -2,8 +2,8 @@
     <div class="container pure-g">
 
       <div class="footer-links pure-u-1">
-        <div class="copyright">&copy; 2016 Ben Domanico</div>
-        <div class="contact">315 952 1525 &bull; ben@domanico.net</div>
+        <div class="copyright small-caps">&copy; 2016 Ben Domanico</div>
+        <div class="contact small-caps">315 952 1525 &bull; ben@domanico.net</div>
       </div>
 
     </div> <!-- /.container -->
