--- a/includes/_header.html
+++ b/includes/_header.html
@@ -23,11 +23,11 @@
     <div class="container pure-g">
 
       <div class="nav-links pure-u-1">
-        <a href="/" class="name">Ben Domanico</a>
+        <a href="/" class="name h3">Ben Domanico</a>
 
         <ul class="nav-list">
-          <li><a href="http://www.linkedin.com/domanico">Resume</a></li>
-          <li><a href="mailto:ben@domanico.net">Contact</a></li>
+          <li><a href="http://www.linkedin.com/domanico" class="small-caps">Resume</a></li>
+          <li><a href="mailto:ben@domanico.net" class="small-caps">Contact</a></li>
         </ul>
       </div>
 
