[test] text added

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -30,16 +30,16 @@ h1, h2, h3, h4, h5, h6
 
 .h1, .h2, .h3, .h4, .h5, .h6
   font-family: DalaMoaRegularNo2, "Times New Roman", serif
+  letter-spacing: 0.04em
+  text-indent: -0.04em
+  line-height: 1.1em
+  font-weight: normal
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   font-variant-numeric: lining-nums
   -moz-font-feature-settings: "lnum"
   -webkit-font-feature-settings: "lnum"
   font-feature-settings: "lnum"
-  letter-spacing: 0.04em
-  text-indent: -0.04em
-  line-height: 1.1em
-  font-weight: normal
 
 .h1
   font-size: 64px
@@ -135,6 +135,8 @@ h1, h2, h3, h4, h5, h6
       color: $md_white
     &.all-projects
       display: none
+  img
+    background: $vdk_white
 
 .tile-divider
   border-bottom: 1px solid $dk_white
