Removes PJAX, adds smoothTransitions, updates jQuery, moves JS to footer

--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -8,6 +8,8 @@
 
     </div> <!-- /.container -->
   </div> <!-- /.wrapper.footer -->
+  
+  <!-- @javascript jquery-2.2.3.min jquery.smoothState.min interaction -->
 
 </body>
 
