Moves reload to footer

--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -9,6 +9,7 @@
     </div> <!-- /.container -->
   </div> <!-- /.wrapper.footer -->
   
+  <!-- @reload -->
   <!-- @javascript jquery-2.2.3.min jquery.smoothState.min interaction -->
 
 </body>
