--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -109,8 +109,13 @@ h1, h2, h3, h4, h5, h6
     a
       line-height: 0px
 
+
 #data-container
   min-height: calc(100% - 100px)
+  transition: opacity 400ms
+  opacity: 1
+  &.transitioning
+    opacity: 0
 
 .content
   .intro
