--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -142,11 +142,21 @@ h1, h2, h3, h4, h5, h6
   border-bottom: 1px solid $dk_white
   padding-bottom: 5px
   img
-    padding-bottom: 5px
+    margin-bottom: 5px
+
+.footer_nav
+  margin: 10px 0
+  .tile-divider
+    border-top: 1px solid $dk_white
+    padding-top: 8px
+  .small-caps
+    line-height: 10px
+  .tile-next
+    text-align: right
 
 .tile-link
   cursor: pointer
-  transition: border-bottom 150ms ease-in-out
+  transition: border 150ms ease-in-out
   img
     filter: saturate(0%) opacity(60%)
     -webkit-filter: saturate(0%) opacity(60%)
@@ -182,6 +192,7 @@ h1, h2, h3, h4, h5, h6
 .footer
   height: 100px
   padding-top: 10px
+  margin-top: 10px
   background: $vdk_white
   .footer-links
     border-top: 1px solid $black
@@ -196,8 +207,8 @@ h1, h2, h3, h4, h5, h6
   .contact
     right: -2px
 
-.footer_nav
-  margin-top: 50px
+
+
 
 // 568px and up
 @media screen and (min-width: $sm)
@@ -215,6 +226,8 @@ h1, h2, h3, h4, h5, h6
     padding: 0 30px 0 40px
   .tile-project_intro
     min-height: 250px
+    p
+      padding-top: 10px
   .tile-container .data
     position: absolute
     bottom: 10px
