--- a/includes/_footer-nav.html
+++ b/includes/_footer-nav.html
@@ -1,46 +1,20 @@
 <div class="wrapper footer_nav">
   <div class="container pure-g">
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <div class="h4">Base</div>
-        <div class="small-caps">UI Framework</div>
+    <div class="tile project pure-u-1-2" data-url="<!-- $prev-url -->.html">
+      <div class="tile-container tile-link tile-divider tile-previous">
+        <div class="small-caps">Previous</div>
+        <div class="h4"><!-- $prev-title --></div>
+
       </div>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <div class="h4">Base</div>
-        <div class="small-caps">UI Framework</div>
+    <div class="tile project pure-u-1-2" data-url="<!-- next-url -->.html">
+      <div class="tile-container tile-link tile-divider tile-next">
+        <div class="small-caps">Next</div>
+        <div class="h4"><!-- $next-title --></div>
       </div>
     </div>
 
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <div class="h4">Base</div>
-        <div class="small-caps">UI Framework</div>
-      </div>
-    </div>
-
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <div class="h4">Base</div>
-        <div class="small-caps">UI Framework</div>
-      </div>
-    </div>
-
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <div class="h4">Base</div>
-        <div class="small-caps">UI Framework</div>
-      </div>
-    </div>
-
-    <div class="tile project pure-u-1 pure-u-sm-1-2 pure-u-md-1-3" data-url="project.html">
-      <div class="tile-container tile-link tile-divider">
-        <div class="h4">Base</div>
-        <div class="small-caps">UI Framework</div>
-      </div>
-    </div>
   </div><!-- /.container -->
 </div><!-- /.wrapper.footer_nav -->
