--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6
 
 #data-container
   min-height: calc(100% - 100px)
-  transition: opacity 400ms
+  transition: opacity 400ms ease-in-out
   opacity: 1
   &.transitioning
     opacity: 0
@@ -189,6 +189,11 @@ h1, h2, h3, h4, h5, h6
   visibility: hidden
   margin-bottom: 40px
   width: 100%
+  height: calc(100vw * 0.4)
+  img
+    width: 100%
+    height: auto
+    max-height: 100%
 
 .project-mast.opaque
   opacity: 0
