Got crossfade working with header link too

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -114,7 +114,7 @@ h1, h2, h3, h4, h5, h6
   min-height: calc(100% - 100px)
   transition: opacity 400ms ease-in-out
   opacity: 1
-  &.transitioning
+  .transitioning &
     opacity: 0
 
 .content
