--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,17 +1,18 @@
-  <div class="wrapper footer">
-    <div class="container pure-g">
+    <div class="wrapper footer">
+      <div class="container pure-g">
 
-      <div class="footer-links pure-u-1">
-        <div class="copyright small-caps">&copy; 2016 Ben Domanico</div>
-        <div class="contact small-caps">315 952 1525 &bull; ben@domanico.net</div>
-      </div>
+        <div class="footer-links pure-u-1">
+          <div class="copyright small-caps">&copy; 2016 Ben Domanico</div>
+          <div class="contact small-caps">315 952 1525 &bull; ben@domanico.net</div>
+        </div>
 
-    </div> <!-- /.container -->
-  </div> <!-- /.wrapper.footer -->
+      </div> <!-- /.container -->
+    </div> <!-- /.wrapper.footer -->
+  
+  </div> <!-- /#page-wrapper -->
   
   <!-- @reload -->
   <!-- @javascript jquery-2.2.3.min jquery.smoothState.min interaction -->
-
 </body>
 
 </html>
