--- a/includes/_header.html
+++ b/includes/_header.html
@@ -15,18 +15,18 @@
 </head>
 
 <body>
+  <div id="page-wrapper">
+    <div class="wrapper nav opaque">
+      <div class="container pure-g">
 
-  <div class="wrapper nav opaque">
-    <div class="container pure-g">
+        <div class="nav-links pure-u-1">
+          <a href="/" class="name h3">Ben Domanico</a>
 
-      <div class="nav-links pure-u-1">
-        <a href="/" class="name h3">Ben Domanico</a>
+          <ul class="nav-list">
+            <li><a href="http://www.linkedin.com/domanico" class="small-caps">Resume</a></li>
+            <li><a href="mailto:ben@domanico.net" class="small-caps">Contact</a></li>
+          </ul>
+        </div>
 
-        <ul class="nav-list">
-          <li><a href="http://www.linkedin.com/domanico" class="small-caps">Resume</a></li>
-          <li><a href="mailto:ben@domanico.net" class="small-caps">Contact</a></li>
-        </ul>
-      </div>
-
-    </div> <!-- /.container -->
-  </div> <!-- /.wrapper.nav -->
+      </div> <!-- /.container -->
+    </div> <!-- /.wrapper.nav -->
