Adding Base Images

--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -3,7 +3,7 @@
 
       <div class="footer-links pure-u-1">
         <div class="copyright small-caps">&copy; 2016 Ben Domanico</div>
-        <div class="contact small-caps">315 952 1525 &bull; ben@domanico.net</div>
+        <div class="contact small-caps"><a href="tel:1-315-952-1525">(315) 952-1525</a> &bull; <a href="mailto:ben@domanico.net">ben@domanico.net</a></div>
       </div>
 
     </div> <!-- /.container -->
