--- a/includes/_header.html
+++ b/includes/_header.html
@@ -26,7 +26,7 @@
         <a href="/" class="name h3">Ben Domanico</a>
 
         <ul class="nav-list">
-          <li><a href="http://www.linkedin.com/domanico" class="small-caps">Resume</a></li>
+          <li><a href="http://www.linkedin.com/in/domanico" class="small-caps">Resume</a></li>
           <li><a href="mailto:ben@domanico.net" class="small-caps">Contact</a></li>
         </ul>
       </div>
