Tweaks and stuff

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -109,6 +109,8 @@ h1, h2, h3, h4, h5, h6
     a
       line-height: 0px
 
+#page-wrapper
+  height: 100%
 
 #data-container
   min-height: calc(100% - 100px)
@@ -218,8 +220,6 @@ h1, h2, h3, h4, h5, h6
     right: -2px
   a
     color: $black
-
-
 
 
 // 568px and up
