--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -42,10 +42,10 @@ h1, h2, h3, h4, h5, h6
   font-feature-settings: "lnum"
 
 .h1
-  font-size: 64px
+  font-size: 72px
 
 .h2
-  font-size: 48px
+  font-size: 52px
 
 .h3
   font-size: 32px
@@ -122,6 +122,7 @@ h1, h2, h3, h4, h5, h6
 .content
   .intro
     margin: 160px 0 120px
+    color: $highlight
 
 .tile-container
   position: relative
@@ -238,6 +239,8 @@ h1, h2, h3, h4, h5, h6
     padding: 0 30px 0 40px
   .tile-project_intro
     min-height: 250px
+    h1
+      color: $highlight
     p
       padding-top: 10px
   .tile-container .data
