--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -15,6 +15,12 @@ body
   background: $black
   color: $lt_white
 
+::selection
+  background: $highlight
+
+::-moz-selection
+  background: $highlight
+
 a
   text-decoration: none
   color: $lt_white
