Scroll and hover fixes

--- a/includes/_header.html
+++ b/includes/_header.html
@@ -16,7 +16,7 @@
 
 <body>
   <div id="page-wrapper">
-    <div class="wrapper nav opaque">
+    <div class="wrapper nav <!-- $opaque -->">
       <div class="container pure-g">
 
         <div class="nav-links pure-u-1">
