--- a/includes/_footer-nav.html
+++ b/includes/_footer-nav.html
@@ -1,20 +1,20 @@
 <div class="wrapper footer_nav">
   <div class="container pure-g">
 
-    <div class="tile project pure-u-1-2" data-url="<!-- $prev-url -->.html">
+    <a class="tile project pure-u-1-2" href="<!-- $prev-url -->.html">
       <div class="tile-container tile-link tile-divider tile-previous">
         <div class="small-caps">Previous</div>
         <div class="h4"><!-- $prev-title --></div>
 
       </div>
-    </div>
+    </a>
 
-    <div class="tile project pure-u-1-2" data-url="<!-- next-url -->.html">
+    <a class="tile project pure-u-1-2" href="<!-- $next-url -->.html">
       <div class="tile-container tile-link tile-divider tile-next">
         <div class="small-caps">Next</div>
         <div class="h4"><!-- $next-title --></div>
       </div>
-    </div>
+    </a>
 
   </div><!-- /.container -->
 </div><!-- /.wrapper.footer_nav -->
